--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Github
                     <img src="assets/imgs/SJ.jpg" alt="" class="brand-img">
                     <li class="brand-txt">
                         <h5 class="brand-title">Sylvain Jollin</h5>
-                        <div class="brand-subtitle">Technicien informatique</div>
+                        <div class="brand-subtitle">Technicien informatique et administrateur Jamfpro</div>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
@@ -70,7 +70,7 @@ Github
                 <h3 class="font-weight-light">Qui suis-je?</h3>
                 <span class="line mb-5"></span>
                 <h5 class="mb-3">Présentement gestionnaire d'un parc informatique au CFP Galt à Verdun Montréal </h5>
-                <p class="mt-20">J'ai fais une école d'informartique ,car depuis tout petit je baigne dans les ordinateurs,cela est devenu un hobby. Mon premier ordinateur était un Amstrad 6128.</p>
+                <p class="mt-20">J'ai fais une école d'informatique ,car depuis tout petit je baigne dans les ordinateurs,cela est devenu un hobby. Mon premier ordinateur était un Amstrad 6128.</p>
                 <button class="btn btn-outline-danger"><a href="'/Users/sylvain/Documents/CV/assets/Sylvain Jollin Technicien Informatique3.pdf'"><i class="icon-down-circled2 "></i>Download My CV</button></a>
             </div>
             <div class="col-lg-4 about-card">
