--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
 <header class="header">
     <div class="container">
         <ul class="social-icons pt-3">
-            <li class="social-item"><a class="social-link text-light" href="#" aria-label="Facebook"><i class="ti-facebook" aria-hidden="true"></i></a></li>
-            <li class="social-item"><a class="social-link text-light" href="#" aria-label="Twitter"><i class="ti-twitter" aria-hidden="true"></i></a></li>
-            <li class="social-item"><a class="social-link text-light" href="#" aria-label="Google"><i class="ti-google" aria-hidden="true"></i></a></li>
-            <li class="social-item"><a class="social-link text-light" href="#" aria-label="Instagram"><i class="ti-instagram" aria-hidden="true"></i></a></li>
             <li class="social-item"><a class="social-link text-light" href="#" aria-label="GitHub"><i class="ti-github" aria-hidden="true"></i></a></li>
         </ul>  
         <div class="header-content">
@@ -332,10 +328,7 @@
                         </div>
                     </div>
                     <ul class="social-icons pt-4">
-                        <li class="social-item"><a class="social-link text-dark" href="#" aria-label="Facebook"><i class="ti-facebook" aria-hidden="true"></i></a></li>
-                        <li class="social-item"><a class="social-link text-dark" href="#" aria-label="Twitter"><i class="ti-twitter" aria-hidden="true"></i></a></li>
-                        <li class="social-item"><a class="social-link text-dark" href="#" aria-label="Google"><i class="ti-google" aria-hidden="true"></i></a></li>
-                        <li class="social-item"><a class="social-link text-dark" href="#" aria-label="Instagram"><i class="ti-instagram" aria-hidden="true"></i></a></li>
+                        <li class="social-item"><a class="social-link text-dark" href="#" aria-label="LinkedIn"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
                         <li class="social-item"><a class="social-link text-dark" href="#" aria-label="GitHub"><i class="ti-github" aria-hidden="true"></i></a></li>
                     </ul> 
                 </div>
