--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <header class="header">
     <div class="container">
         <ul class="social-icons pt-3">
+            <li class="social-item"><a class="social-link text-dark" href="#" aria-label="LinkedIn"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
+
             <li class="social-item"><a class="social-link text-light" href="#" aria-label="GitHub"><i class="ti-github" aria-hidden="true"></i></a></li>
         </ul>  
         <div class="header-content">
@@ -42,7 +44,7 @@
             </ul>
             <ul class="navbar-nav brand">
                 <li>
-                    <img src="assets/imgs/SJ.jpg" alt="Portrait de Sylvain Jollin" class="brand-img">
+                    <img src="assets/imgs/SJ" alt="Portrait de Sylvain Jollin" class="brand-img">
                 </li>
                 <li class="brand-txt">
                     <h5 class="brand-title">Sylvain Jollin</h5>
@@ -82,10 +84,8 @@
                 <li><span>Adresse</span> : 89 l'Impasse des Pins, 85690 Notre-Dame-de-Monts</li>
             </ul>
             <ul class="social-icons pt-3">
-                <li class="social-item"><a class="social-link" href="#" aria-label="Facebook"><i class="ti-facebook" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link" href="#" aria-label="Twitter"><i class="ti-twitter" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link" href="#" aria-label="Google"><i class="ti-google" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link" href="#" aria-label="Instagram"><i class="ti-instagram" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-dark" href="#" aria-label="LinkedIn"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
+
                 <li class="social-item"><a class="social-link" href="#" aria-label="GitHub"><i class="ti-github" aria-hidden="true"></i></a></li>
             </ul>  
         </div>
