--- a/index.html
+++ b/index.html
@@ -244,31 +244,31 @@
                     <div class="card-body pb-2">
                        <h6>HTML &amp; CSS</h6>
                         <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-danger" role="progressbar" style="width: %" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <h6>Support technique</h6>
                         <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-danger" role="progressbar" style="width: %" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <h6>Installation d'un poste</h6>
                         <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-danger" role="progressbar" style="width: %" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <h6>Analyse et Résolution de problèmes</h6>
                         <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-danger" role="progressbar" style="width: %" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <h6>Python / Visual Studio Code</h6>
                         <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-danger" role="progressbar" style="width: %" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <h6>Microsoft Office 365</h6>
                         <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-danger" role="progressbar" style="width: %" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <h6>MacOS</h6>
                         <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-danger" role="progressbar" style="width: %" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                 </div>
@@ -282,11 +282,11 @@
                     <div class="card-body pb-2">
                        <h6>Français</h6>
                         <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-danger" role="progressbar" style="width: %" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <h6>Anglais</h6>
                         <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-danger" role="progressbar" style="width: %" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                 </div>
