--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </ul>
             <ul class="navbar-nav brand">
                 <li>
-                    <img src="assets/imgs/SJ" alt="Portrait de Sylvain Jollin" class="brand-img">
+                    <img src="assets/imgs/SJ.jpeg" alt="Portrait de Sylvain Jollin" class="brand-img">
                 </li>
                 <li class="brand-txt">
                     <h5 class="brand-title">Sylvain Jollin</h5>
