--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <div class="container">
         <ul class="social-icons pt-3">
             <li class="social-item"><a class="social-link text-dark" href="#" aria-label="LinkedIn"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
-
             <li class="social-item"><a class="social-link text-light" href="#" aria-label="GitHub"><i class="ti-github" aria-hidden="true"></i></a></li>
         </ul>  
         <div class="header-content">
@@ -84,8 +83,7 @@
                 <li><span>Adresse</span> : 89 l'Impasse des Pins, 85690 Notre-Dame-de-Monts</li>
             </ul>
             <ul class="social-icons pt-3">
-                <li class="social-item"><a class="social-link text-dark" href="#" aria-label="LinkedIn"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
-
+                <li class="social-item"><a class="social-link" href="#" aria-label="LinkedIn"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link" href="#" aria-label="GitHub"><i class="ti-github" aria-hidden="true"></i></a></li>
             </ul>  
         </div>
