--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </ul>
             <ul class="navbar-nav brand">
                 <li>
-                    <img src="assets/imgs/SJ.jpeg" alt="Portrait de Sylvain Jollin" class="brand-img">
+                    <img id="photo-sylvain" src="assets/imgs/SJ.jpeg" alt="Portrait de Sylvain Jollin" class="brand-img">
                 </li>
                 <li class="brand-txt">
                     <h5 class="brand-title">Sylvain Jollin</h5>
