--- a/index.html
+++ b/index.html
@@ -385,5 +385,18 @@
     document.getElementById('year').textContent = new Date().getFullYear();
 </script>
 
+<script>
+  // Sélectionne la photo par son id
+  const photo = document.getElementById('photo-sylvain');
+  window.addEventListener('scroll', function() {
+    if (window.scrollY > 100) {
+      photo.classList.add('photo-hidden');
+    } else {
+      photo.classList.remove('photo-hidden');
+    }
+  });
+</script>
+
+    
 </body>
 </html>
