--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
                 <li><span>Date de naissance</span> : 08/05/1980</li>
                 <li><span>Email</span> : <a href="mailto:sylvain.jollin@outlook.com">sylvain.jollin@outlook.com</a></li>
                 <li><span>Mobile</span> : <a href="tel:+33759531968">07 59 53 19 68</a></li>
-                <li><span>Adresse</span> : 89 l'Impasse des Pins, 85690 Notre-Dame-de-Monts</li>
+                <li><span>Adresse</span> : <a href="https://www.google.com/maps/search/?api=1&query=89l+Impasse+des+Pins+85690+Notre-Dame-de-Monts" target="_blank" rel="noopener">89l Impasse des Pins <br>85690 Notre-Dame-de-Monts</a></li>
+
             </ul>
             <ul class="social-icons pt-3">
                 <li class="social-item">
