--- a/index.html
+++ b/index.html
@@ -207,6 +207,15 @@
                             &rarr; Phoning, traduction Anglais / Français entre les fournisseurs, création de fiche produit<br>
                             &rarr; Support pour le technicien quand celui-ci en avait besoin
                         </p>      
+                         <hr>
+                        <h6 class="title text-danger">2008 - 2012</h6>
+                        <p><strong>Manutentionnaire (France)</strong></p>
+                        <p class="subtitle">
+                            &rarr; Création de palette<br>
+                            &rarr; Sablage et entreposage<br>
+                            &rarr; Séparer les plastiques des objets créés
+                        </p>                                  
+                    </div>
                         <hr>
                         <h6 class="title text-danger">2002 - 2008</h6>
                         <p><strong>Peintre en bâtiment (France)</strong></p>
